--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.17.4",
+    "@builder.io/qwik": "^0.101.0",
     "@builder.io/qwik-city": "0.0.128",
     "@types/eslint": "8.21.0",
     "@types/node": "^18.11.18",
@@ -34,7 +34,7 @@
     "node-fetch": "3.3.0",
     "prettier": "2.8.3",
     "typescript": "4.9.5",
-    "undici": "5.16.0",
+    "undici": "^5.21.2",
     "vercel": "^28.4.17",
     "vite": "4.0.4",
     "vite-tsconfig-paths": "3.5.0"
