--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.101.0",
-    "@builder.io/qwik-city": "0.0.128",
-    "@types/eslint": "8.21.0",
-    "@types/node": "^18.11.18",
+    "@builder.io/qwik": "0.101.0",
+    "@builder.io/qwik-city": "~0.101.0",
+    "@types/eslint": "8.37.0",
+    "@types/node": "^18.15.9",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
-    "eslint": "8.33.0",
-    "eslint-plugin-qwik": "0.17.4",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
+    "eslint": "8.37.0",
+    "eslint-plugin-qwik": "0.101.0",
     "node-fetch": "3.3.0",
-    "prettier": "2.8.3",
-    "typescript": "4.9.5",
-    "undici": "^5.21.2",
+    "prettier": "2.8.7",
+    "typescript": "5.0.3",
+    "undici": "5.21.0",
     "vercel": "^28.4.17",
-    "vite": "4.0.4",
+    "vite": "4.2.1",
     "vite-tsconfig-paths": "3.5.0"
   }
 }
