--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.101.0",
-    "@builder.io/qwik-city": "~0.101.0",
+    "@builder.io/qwik": "^1.1.4",
+    "@builder.io/qwik-city": "^1.1.4",
     "@types/eslint": "8.37.0",
-    "@types/node": "^18.15.9",
+    "@types/node": "^20.1.4",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.57.1",
-    "@typescript-eslint/parser": "5.57.1",
-    "eslint": "8.37.0",
-    "eslint-plugin-qwik": "0.101.0",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
+    "eslint": "8.40.0",
+    "eslint-plugin-qwik": "^1.1.4",
     "node-fetch": "3.3.0",
-    "prettier": "2.8.7",
-    "typescript": "5.0.3",
-    "undici": "5.21.0",
-    "vercel": "^29.0.3",
-    "vite": "4.2.1",
-    "vite-tsconfig-paths": "3.5.0"
+    "prettier": "2.8.8",
+    "typescript": "5.0.4",
+    "undici": "5.22.1",
+    "vercel": "^29.1.1",
+    "vite": "4.3.5",
+    "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
     "qwik": "^1.0.57"
