--- a/package.json
+++ b/package.json
@@ -24,25 +24,26 @@
   "devDependencies": {
     "@auth/core": "^0.7.1",
     "@builder.io/partytown": "^0.8.0",
-    "@builder.io/qwik": "^1.1.4",
+    "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-auth": "~0.1.0",
-    "@builder.io/qwik-city": "^1.1.4",
-    "@types/eslint": "8.37.0",
-    "@types/node": "^20.1.4",
+    "@builder.io/qwik-city": "^1.2.6",
+    "@types/eslint": "8.40.2",
+    "@types/node": "^20.4.0",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "eslint": "8.40.0",
-    "eslint-plugin-qwik": "^1.1.4",
+    "eslint-plugin-qwik": "^1.1.6",
     "node-fetch": "3.3.0",
     "prettier": "2.8.8",
-    "typescript": "5.0.4",
+    "typescript": "5.1.6",
     "undici": "5.22.1",
-    "vercel": "^29.0.3",
-    "vite": "4.3.5",
+    "vercel": "^24.2.4",
+    "vite": "4.4",
     "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
+    "nodemailer": "^6.9.3",
     "qwik": "^1.0.57"
   }
 }
