--- a/package.json
+++ b/package.json
@@ -22,23 +22,18 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@auth/core": "^0.7.1",
     "@builder.io/partytown": "^0.8.0",
-    "@builder.io/qwik": "~1.2.7",
-    "@builder.io/qwik-auth": "~0.1.0",
-    "@builder.io/qwik-city": "~1.2.7",
+    "@builder.io/qwik": "^1.2.7",
+    "@builder.io/qwik-city": "^1.2.7",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
-    "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "eslint": "8.45.0",
-    "eslint-plugin-qwik": "~1.2.7",
-    "node-fetch": "3.3.0",
+    "eslint-plugin-qwik": "^1.2.7",
     "prettier": "3.0.0",
     "typescript": "5.1.6",
     "undici": "5.22.1",
-    "vercel": "~24.2.4",
     "vite": "4.4.7",
     "vite-tsconfig-paths": "4.2.0"
   },
