--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/deno/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
@@ -18,19 +18,24 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "deno run --allow-net --allow-read --allow-env server/entry.deno.js",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@auth/core": "^0.7.1",
     "@builder.io/partytown": "^0.8.0",
-    "@builder.io/qwik": "^1.2.7",
-    "@builder.io/qwik-city": "^1.2.7",
+    "@builder.io/qwik": "~1.2.7",
+    "@builder.io/qwik-auth": "~0.1.0",
+    "@builder.io/qwik-city": "~1.2.7",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
+    "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.7",
+    "node-fetch": "3.3.0",
     "prettier": "3.0.0",
     "typescript": "5.1.6",
     "undici": "5.22.1",
