--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
@@ -18,6 +18,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -27,13 +28,17 @@
     "@builder.io/qwik": "~1.2.7",
     "@builder.io/qwik-auth": "~0.1.0",
     "@builder.io/qwik-city": "~1.2.7",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "8.44.1",
+    "@types/express": "4.17.17",
     "@types/node": "^20.4.5",
     "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
+    "compression": "^1.7.4",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.7",
+    "express": "4.18.2",
     "node-fetch": "3.3.0",
     "prettier": "3.0.0",
     "typescript": "5.1.6",
