--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/express/vite.config.ts",
+    "build.server": "vite build -c adapters/aws-lambda/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "deploy": "serverless deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "node server/entry.express",
+    "serve": "qwik build && serverless offline",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -29,7 +30,6 @@
     "@builder.io/qwik-city": "~1.2.7",
     "@types/compression": "^1.7.2",
     "@types/eslint": "8.44.1",
-    "@types/express": "4.17.17",
     "@types/node": "^20.4.5",
     "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "6.2.0",
@@ -37,9 +37,12 @@
     "compression": "^1.7.4",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.7",
-    "express": "4.18.2",
     "node-fetch": "3.3.0",
     "prettier": "3.0.0",
+    "serverless": "^3.32.2",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^12.0.4",
+    "source-map-support": "^0.5.21",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.7",
