--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -18,4 +18,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: empty-dove-51 # the name of the project on Deno Deploy
-          entrypoint: app/server/entry.deno.js # the entrypoint to deploy
+          entrypoint: ./app/server/entry.deno.js # the entrypoint to deploy
