--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -32,4 +32,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: empty-dove-51 # the name of the project on Deno Deploy
-          entrypoint: ./app/server/entry.deno.js # the entrypoint to deploy
+          entrypoint: ./server/entry.deno.js # the entrypoint to deploy
