--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -27,9 +27,10 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
+        run: ls
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
           project: empty-dove-51 # the name of the project on Deno Deploy
-          entrypoint: /usr/src/app/server/entry.deno.js # the entrypoint to deploy
+          entrypoint: ./app/server/entry.deno.js # the entrypoint to deploy
