--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -27,7 +27,9 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
-        run: ls
+
+      - name: PWD
+        run: pwd
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
