--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: PWD
-        run: pwd
+      - name: ls
+        run: ls
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
