--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -15,8 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag kabeech-website:$(date +%s)
-
+      run: npm run build
   deploy:
     runs-on: ubuntu-latest
 
@@ -35,4 +34,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: empty-dove-51 # the name of the project on Deno Deploy
-          entrypoint: ./src/entry.deno.ts # the entrypoint to deploy
+          entrypoint: ./server/entry.deno.ts # the entrypoint to deploy
