--- a/.github/workflows/docker-image-deno.yml
+++ b/.github/workflows/docker-image-deno.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: npm run build
+      run: docker build . --file Dockerfile --tag kabeech-website:$(date +%s)
   deploy:
     runs-on: ubuntu-latest
 
