--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -1,6 +1,11 @@
 name: Deploy
 
 on: push
+  on:
+  push:
+    branches: [ "deploy-with-deno" ]
+  pull_request:
+    branches: [ "deploy-with-deno" ]
 
 jobs:
   deploy:
