--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -4,8 +4,10 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
-    branches:
-      - deploy-on-vercel
+    branches: [" deploy-on-vercel "]
+  pull_request:
+    branches: [" deploy-on-vercel "]
+    
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
