--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -1,9 +1,12 @@
 name: Vercel Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
-    branches: [" deploy-on-vercel "]
+    branches: [ "deploy-on-vercel" ]
   pull_request:
-    branches: [" deploy-on-vercel "]
+    branches: [ "deploy-on-vercel" ]
     
 jobs:
   Deploy-Production:
