--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: ls
-        run: ls
+        run: ls src/
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
