--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: ls
-        run: ls src/
+      - name: Install deps
+        run: npm install
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
