--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Clean install
         run: npm run build
+        env: 
+          STARCROSSED_API: https://hungry-heron-21.deno.dev
+
 
       - name: Copy build artifacts
         run: mkdir app | cp -r node_modules app/node_modules | cp -r server app/server | cp -r dist app/dist
