--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Clean install
         run: npm run build
         env: 
-          STARCROSSED_API: https://hungry-heron-21.deno.dev
+          STARCROSSED_API: ${{ secrets.STARCROSSED_API }}
+          NAMAGEN_API: ${{ secrets.NAMAGEN_API }}
+          AL_LUGHA_MISMA_API: ${{ secrets.AL_LUGHA_MISMA_API }}
 
 
       - name: Copy build artifacts
