--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Clean install
         run: npm ci
 
-      - name: Clean install
+      - name: Build for deployment
         run: npm run build
         env: 
           STARCROSSED_API: ${{ secrets.STARCROSSED_API }}
@@ -38,5 +38,5 @@ jobs:
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: empty-dove-51 # the name of the project on Deno Deploy
+          project: ${{ secrets.DENO_DEPLOY_PROJECT }} # the name of the project on Deno Deploy
           entrypoint: ./src/entry.deno.ts # the entrypoint to deploy
