--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -37,3 +37,5 @@ jobs:
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
+        with:
+          project: empty-dove-51 # the name of the project on Deno Deploy
