--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,8 +38,11 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
+      - name: Test
+        run: /home/runner/.deno/bin/deno
+
       - name: Install deployctl
-        run: /home/runner/.deno/bin/deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
+        run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
 
       - name: Deploy to Deno Deploy
-        run: /home/runner/.deno/bin/deployctl deploy --project=${{ secrets.DENO_DEPLOY_PROJECT }} ./server/entry.deno.js
+        run: deployctl deploy --project=${{ secrets.DENO_DEPLOY_PROJECT }} ./server/entry.deno.js
