--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -39,7 +39,7 @@ jobs:
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
       - name: Test
-        run: /home/runner/.deno/bin/deno
+        run: /home/runner/.deno/bin/deno help
 
       - name: Install deployctl
         run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
