--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,8 +38,11 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
+      - name: Exoort path
+        run: export PATH="/home/username/.deno/bin:$PATH"
+
       - name: Test
-        run: /home/runner/.deno/bin/deno help
+        run: deno --version
 
       - name: Install deployctl
         run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
