--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
-      - name: Exoort path
+      - name: Export path
         run: export PATH="/home/username/.deno/bin:$PATH"
 
       - name: Test
-        run: deno --version
+        run: pwd | deno --version
 
       - name: Install deployctl
         run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
