--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
-      - name: Export path
-        run: export PATH="/home/runner/.deno/bin:$PATH"
+      - name: Export dir
+        run: export DENO_INSTALL="/home/runner/.deno"
 
-      - name: Test
-        run: pwd
+      - name: Export path
+        run: export PATH="$DENO_INSTALL/bin:$PATH"
 
       - name: Install deployctl
         run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
