--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,17 +38,20 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
+      - name: Restart shell in interactive mode
+        run: source ~/.bashrc -i
+
       - name: Export dir
         run: export DENO_INSTALL="/home/runner/.deno"
 
       - name: Export path
         run: export PATH="$DENO_INSTALL/bin:$PATH" | echo $PATH
 
-      - name: Restart shell
-        run: source ~/.bashrc
+      - name: Restart shell in interactive mode
+        run: source ~/.bashrc -i
 
       - name: Test
-        run: cat ~/.bashrc
+        run: echo $PATH
 
       - name: Install deployctl
         run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
