--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -42,10 +42,10 @@ jobs:
         run: source ~/.bashrc -i
 
       - name: Export dir
-        run: export DENO_INSTALL="/home/runner/.deno" -i
+        run: export -i DENO_INSTALL="/home/runner/.deno"
 
       - name: Export path
-        run: export PATH="$DENO_INSTALL/bin:$PATH" -i
+        run: export -i PATH="$DENO_INSTALL/bin:$PATH"
         
       - name: Test
         run: cat ~/.bashrc
