--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -39,7 +39,7 @@ jobs:
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
       - name: Restart shell in interactive mode
-        run: ~/.bashrc -i
+        run: source ~/.bashrc -i
 
       - name: Export dir
         run: export DENO_INSTALL="/home/runner/.deno"
