--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -38,40 +38,8 @@ jobs:
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
 
-      - name: Restart shell in interactive mode
-        run: source ~/.bashrc -i
-
-                      
-      - name: Write File              
-        uses: DamianReeves/write-file-action@v1.2
-        with:
-          path: ~/.bashrc
-          write-mode: overwrite
-          contents: |
-            if [ -f /etc/bashrc ]; then
-                    . /etc/bashrc
-            fi
-
-            if ! [[ "$PATH" =~ "$HOME/.local/bin:$HOME/bin:" ]]
-            then
-                PATH="$HOME/.local/bin:$HOME/bin:$PATH"
-            fi
-            export PATH
-            
-      - name: Export dir
-        run: export DENO_INSTALL="/home/runner/.deno"
-
-      - name: Export path
-        run: export PATH="$DENO_INSTALL/bin:$PATH"
-        
-      - name: Test
-        run: cat ~/.bashrc
-
-      - name: Restart shell in interactive mode
-        run: source ~/.bashrc -i
-
       - name: Install deployctl
-        run: deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
+        run: /home/runner/.deno/bin/deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
 
       - name: Deploy to Deno Deploy
-        run: deployctl deploy --project=${{ secrets.DENO_DEPLOY_PROJECT }} ./server/entry.deno.js
+        run: /home/runner/.deno/bin/deployctl deploy --project=${{ secrets.DENO_DEPLOY_PROJECT }} ./server/entry.deno.js
