--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
+      - name: Test
+        run: cat ~/.bashrc
+
       - name: Clean install
         run: npm ci
 
@@ -37,10 +40,7 @@ jobs:
 
       - name: Install Deno
         run: curl -fsSL https://deno.land/x/install/install.sh | sh
-
-      - name: Test
-        run: /home/runner/.deno/bin/deno --help
-
+        
       - name: Install deployctl
         run: /home/runner/.deno/bin/deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
 
