--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -35,15 +35,8 @@ jobs:
       - name: Change directory
         run: cd app/
 
-      - name: Install Deno
-        shell: bash {0}
-        run: |
-          curl -fsSL https://deno.land/x/install/install.sh | sh 
-          export DENO_INSTALL="/home/runner/.deno"
-          export PATH="$DENO_INSTALL/bin:$PATH"
-          
       - name: Deploy to Deno Deploy
-        shell: bash {0}
-        run: |
-          deno install --allow-all --no-check -r -f https://deno.land/x/deploy/deployctl.ts
-          deployctl deploy --project=${{ secrets.DENO_DEPLOY_PROJECT }} ./server/entry.deno.js
+        uses: denoland/deployctl@v1
+        with:
+          project: ${{ secrets.DENO_DEPLOY_PROJECT }}
+          entrypoint: ./server/entry.deno.jsy
