--- a/.github/workflows/deployctl.yml
+++ b/.github/workflows/deployctl.yml
@@ -39,4 +39,4 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: empty-dove-51
-          entrypoint: ./server/entry.deno.jsy
+          entrypoint: ./server/entry.deno.ts
